--- a/style.css
+++ b/style.css
@@ -1,119 +1,123 @@
-*{
-box-sizing:border-box;
-margin:0;
+* {
+    box-sizing: border-box;
+    margin: 0;
 }
 
-html{
-font-size:16px;
-font-weight:400;
-font-family: "Karla", sans-serif;
+html {
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "Karla", sans-serif;
 }
 
-#top-section{
-height:45%;
-width:100%;
-padding:30px;
+#top-section {
+    height: 45%;
+    width: 100%;
+    padding: 30px;
 }
 
-#bottom-section{
-color:white;
+#bottom-section {
+    color: white;
 }
 
-#top-section h2{
-color:#2ab2af;
-margin-bottom:15px;
-}
-#top-section h4{
-margin-bottom:15px;
-color:#c0df34;
-}
-#top-section p{
-color:#98a6bd;
-line-height:22px;
+#top-section h2 {
+    color: #2ab2af;
+    margin-bottom: 15px;
 }
 
-body{
-padding:50px;
+#top-section h4 {
+    margin-bottom: 15px;
+    color: #c0df34;
 }
 
-#card{
-height:400px;
-width:700px;
-box-shadow: 3px 3px 9px -1px rgba(0,0,0,0.75);
-border-radius:10px;
-overflow:hidden;
+#top-section p {
+    color: #98a6bd;
+    line-height: 22px;
 }
 
-#bottom-section{
-height:55%;
-width:100%;
+body {
+    padding: 50px;
 }
 
-#bottom-left, #bottom-right{
-display:inline-block;
-width:50%;
-height:100%;
-vertical-align:top;
-padding:30px;
+#card {
+    height: 400px;
+    width: 700px;
+    box-shadow: 3px 3px 9px -1px rgba(0, 0, 0, 0.75);
+    border-radius: 10px;
+    overflow: hidden;
 }
 
-#bottom-left{
-background-color:#2ab2af;
+#bottom-section {
+    height: 55%;
+    width: 100%;
 }
 
-#bottom-right{
-background-color:#1ac9c5;
+#bottom-left,
+#bottom-right {
+    display: inline-block;
+    width: 50%;
+    height: 100%;
+    vertical-align: top;
+    padding: 30px;
 }
 
-button{
-margin-top:20px;
-padding:10px;
-width:100%;
-color:white;
-background-color:#afcd2e;
-border:none;
-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);
-border-radius:4px;
+#bottom-left {
+    background-color: #2ab2af;
 }
 
-.price-container{
-margin:15px 0px;
+#bottom-right {
+    background-color: #1ac9c5;
 }
 
-.price{
-font-size:1.5rem;
-font-weight:700;
-margin-right:10px;
+button {
+    margin-top: 20px;
+    padding: 10px;
+    width: 100%;
+    color: white;
+    background-color: #afcd2e;
+    border: none;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.75);
+    border-radius: 4px;
 }
 
-.price-frequency{
-font-size:0.85rem;
-position:relative;
-top:-4px;
-opacity:0.9;
+.price-container {
+    margin: 15px 0px;
 }
 
-#bottom-left p{
-font-size:0.9rem;
+.price {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-right: 10px;
 }
 
-.price, .price-frequency{
-display:inline-block;
+.price-frequency {
+    font-size: 0.85rem;
+    position: relative;
+    top: -4px;
+    opacity: 0.9;
 }
 
-ul{
-list-style:none;
-margin-top:10px;
-padding:0;
+#bottom-left p {
+    font-size: 0.9rem;
 }
 
-ul li{
-font-size:0.9rem;
-opacity:0.9;
+.price,
+.price-frequency {
+    display: inline-block;
 }
 
-button:hover{
-background-color:#a9c42d;
-cursor:pointer;
-transform:scale(1.03);
+ul {
+    list-style: none;
+    margin-top: 10px;
+    padding: 0;
+}
+
+ul li {
+    font-size: 0.9rem;
+    opacity: 0.9;
+}
+
+button:hover {
+    background-color: #a9c42d;
+    cursor: pointer;
+    transform: scale(1.03);
 }
